# fractal-intel-lab

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: basic_robustness.py
core/: __init__.py  cognition.py  concepts.py  fbits.py  homeostasis.py  oneiric.py
docs/: architecture.md  benchmarks.md  index.md  math-foundations.md  whitepaper.md
examples/: language_demo.py  minimal_mind_demo.py
fractal_intel_lab/: __init__.py  cli.py  metrics.py
tests/: test_smoke.py
visualization/: plot_fractal.py
