[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-intel-lab"
version = "0.1.0"
description = "Geometry-first cognitive architecture built on fractal dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Joshua Privett", email = "Perseverancesworld@gmail.com" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "networkx>=3.0",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]